@@ -5,6 +5,7 @@ dist_cygclass_DATA = 			\
 	apache1.cygclass			\
 	apache2.cygclass			\
 	aspell-dict.cygclass		\
+	autotools.cygclass			\
 	berkdb.cygclass				\
 	bzr.cygclass				\
 	claws-mail.cygclass			\
